# S6-INFO

./: .gitignore  .gitmodules
ApprAuto/tp01/: .gitignore  TP1.ipynb  requirements.txt  weather.csv  weather.nominal.csv
ApprAuto/tp02/: README  no_shows.ipynb  requirements.txt
ApprAuto/tp03/: .gitignore  adaboost-student.ipynb  requirements.txt
ApprAuto/tp04/: requirements.txt  tp_nn_squelette.py
BDD/: .gitignore
BDD/tp01/: exemple.dtd  exemple.xml  style.css
BDD/tp02/: README.md  part1.xq  part2.xq
BDD/tp03/: tp03.txt
BDD/tp04/: tp04.txt
BDD/tp05/: tp05.txt
Complexite/: matMult.c
Complexite/annale/: CMakeLists.txt  main.c
Complexite/tp01/: ngram.c
IA/AStar/: .gitignore
IA/Tetris/: .gitignore  Makefile  weights.md  weights.txt
IA/Tetris/src/: cem.cpp  cem.hpp  control.cpp  control.hpp  main.cpp  shape.cpp  shape.hpp  tetris.cpp  view.cpp  view.hpp
PPI/: notes_prep.md
Parallelisme/tp01/: CMakeLists.txt  ex1.c  ex2.c
Parallelisme/tp02/: CMakeLists.txt  ex1.c  ex2.c
Parallelisme/tp03/: CMakeLists.txt  main.c
Parallelisme/tp04/: CMakeLists.txt  ex1.c  ex2.c  ex3.c
Parallelisme/tp05/: .gitignore  Calculs_theoriques.md  README.md
Parallelisme/tp05/Convolution/: convolution.cpp  (+1 more)
Reseau/tp01/: .gitignore  template.typ  tp01.typ
Reseau/tp02/: pom.xml
Reseau/tp03/: .gitignore  pom.xml
Reseau/tp04/: CMakeLists.txt  ClientPendu.c  Client_TCP.c  Client_UDP_V2.c  Client_plusoumoins.c  ServeurPendu.c  Serveur_TCP.c  Serveur_UDP_V2.c  Serveur_plusoumoins.c
Web/: .gitignore
Web/tp-spring/: README.md  openapi.yaml
(+44 files in other folders)
